change preseed config

--- a/http/ubuntu1804-preseed.cfg
+++ b/http/ubuntu1804-preseed.cfg
@@ -3,7 +3,7 @@ d-i debian-installer/locale string en_US.UTF-8
 d-i console-setup/ask_detect boolean false
 d-i console-setup/layout string us
 
-d-i netcfg/get_hostname string ubuntu
+d-i netcfg/get_hostname string sysadm
 d-i netcfg/get_domain string local
 
 ### Clock and time zone setup
@@ -15,7 +15,7 @@ d-i kbd-chooser/method select American English
 
 d-i mirror/country string manual
 d-i mirror/http/hostname string archive.ubuntu.com
-d-i mirror/http/directory string /ubuntu
+d-i mirror/http/directory string /sysadm
 d-i mirror/http/proxy string
 
 d-i partman/confirm_write_new_label boolean true
@@ -66,7 +66,7 @@ d-i netcfg/wireless_wep string
 # Security
 d-i apt-setup/services-select multiselect security
 d-i apt-setup/security_host string archive.ubuntu.com
-d-i apt-setup/security_path string /ubuntu
+d-i apt-setup/security_path string /sysadm
 
 # No multiarch by default
 d-i apt-setup/multiarch string
